--- a/module/utils/CMakeLists.txt
+++ b/module/utils/CMakeLists.txt
@@ -7,10 +7,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 project(
-    CPP_PROJECT_TEMPLATE
+    UTILS
     LANGUAGES CXX
     VERSION 1.0.0
-    DESCRIPTION "C++ Project Template"
+    DESCRIPTION " "
     #HOMEPAGE_URL "https://github.com/kwm1223/cpp_project_template.git"
 )
 
@@ -93,30 +93,30 @@ message(STATUS "${PROJECT_NAME}_RESOURCE_PATH: ${${PROJECT_NAME}_RESOURCE_PATH}"
 message(STATUS " ")
 
 add_subdirectory(${${PROJECT_NAME}_THIRDPARTY_PATH})
-add_subdirectory(${${PROJECT_NAME}_MODULE_PATH})
-add_subdirectory(${${PROJECT_NAME}_APPLICATION_PATH})
+#add_subdirectory(${${PROJECT_NAME}_MODULE_PATH})
+#add_subdirectory(${${PROJECT_NAME}_APPLICATION_PATH})
 
 # base 구조
 set(${PROJECT_NAME}_SOURCE_FILES
   # ! Add source files here
-  #src/main.cpp
+  src/utils.cpp
 )
 
 # ! If you want to make a library, use the following code
-# add_library(${PROJECT_NAME} STATIC)
-#   ${${PROJECT_NAME}_SOURCE_FILES}
-# )
+add_library(${PROJECT_NAME} STATIC
+  ${${PROJECT_NAME}_SOURCE_FILES}
+)
 
-# ! If you want to make an excutable, use the following code
+# # ! If you want to make an excutable, use the following code
 # add_executable(${PROJECT_NAME}
 #   ${${PROJECT_NAME}_SOURCE_FILES}
 # )
 
 # ! If you want to add include directories and link libraries, use the following code
-# target_include_directories(${PROJECT_NAME} PUBLIC)
-#   ${${PROJECT_NAME}_INCLUDE_PATH}
-# # ! add include path here
-# )
+target_include_directories(${PROJECT_NAME} PUBLIC
+  ${${PROJECT_NAME}_INCLUDE_PATH}
+# ! add include path here
+)
 
 # target_link_libraries(${PROJECT_NAME} PRIVATE
 # ! Add libraries here
@@ -126,9 +126,9 @@ set(${PROJECT_NAME}_SOURCE_FILES
 # ! Add dependencies here
 # )
 
-# target_compile_options(${PROJECT_NAME} PRIVATE
-#   ${CPP_COMFILE_FLAGS}
-# )
+target_compile_options(${PROJECT_NAME} PRIVATE
+  ${CPP_COMFILE_FLAGS}
+)
 
 message(STATUS)
 message(STATUS "Started all process in ${PROJECT_NAME} CMakeLists.txt.")
